# MCPilot

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: usage_example.py
src/mcpilot/: __init__.py  admin.py  api.py  api_wrapper.py  config.py  gateway.py  main.py  middleware.py  server.py  transports.py
src/mcpilot/templates/: admin.html
