[project]
name = "mcpilot"
version = "0.1.0"
description = "A powerful, FastAPI-based gateway for the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0"
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcpilot = "mcpilot:main"
mcpilot-server = "mcpilot.server:main"
mcpilot-gateway = "mcpilot.main:main"
